# GenPreCVSystem

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEPLOY_COMMANDS.md  LICENSE  MVC_REFACTORING.md  README.md  UI_STYLING.md  deploy.bat  requirements.txt
.github/workflows/: cmake-single-platform.yml  windows-ci.yml
docs/: API.md  BUILD.md  CONTRIBUTING.md  FAQ.md
docs/images/: README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_mvc.h  yolo_service.py
src/config/: appsettings.cpp  appsettings.h  recentfilesmanager.cpp  recentfilesmanager.h  tasktypes.h
src/controllers/: filecontroller.cpp  filecontroller.h  imagecontroller.cpp  imagecontroller.h  parameterpanelfactory.cpp  parameterpanelfactory.h  tabcontroller.cpp  tabcontroller.h  taskcontroller.cpp  taskcontroller.h
src/core/: main.cpp  splashscreen.cpp
src/models/: modelinference.h  pythonenvironment.h  tabdata.h  tasktypes.h  undostack.h
src/models/inference/: README.md  modelinference.cpp
src/resources/: resources.qrc
src/resources/models/: README.md
src/resources/models/manholecoverdamagedetection/: mcdd.txt
src/resources/models/roaddamagedetection/: cl_psdd.txt
src/resources/papers/: chapter5.docx
src/services/environment/: environmentcachemanager.cpp  environmentcachemanager.h  environmentscanner.cpp  environmentscanner.h
src/services/image/: imageprocessor.cpp  imageprocessservice.h
src/services/inference/: dlservice.cpp  dlservice.h
src/services/inference/python/: base_service.py  dl_service.py  fsl_service.py
src/services/io/: exportservice.cpp  exportservice.h  fileutils.cpp  fileutils.h
src/services/system/: errordialog.cpp  exceptions.cpp  exceptions.h
src/styles/: modernstyle.cpp  modernstyle.h  thememanager.cpp  thememanager.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  splashscreen.cpp  splashscreen.h
src/utils/: appsettings.cpp  appsettings.h  clipboardhelper.cpp  clipboardhelper.h  errordialog.h  exceptions.h  exportservice.cpp  exportservice.h  fileutils.cpp  fileutils.h  imageprocessor.h  imageprocessservice.cpp  imageprocessservice.h  recentfilesmanager.cpp  yoloservice.cpp  yoloservice.h
src/views/: batchprocessdialog.cpp  batchprocessdialog.h  detectionresultdialog.cpp  detectionresultdialog.h  filetreeview.h  imagefilefilterproxy.cpp  imagefilefilterproxy.h  imageview.cpp  imageview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h
src/views/components/: environmentservicewidget.cpp  environmentservicewidget.h  filetreeview.cpp
src/views/dialogs/: batchprocessdialog.cpp  batchprocessdialog.h  detectionresultdialog.cpp  detectionresultdialog.h  settingsdialog.cpp  settingsdialog.h
src/widgets/: environmentservicewidget.cpp  environmentservicewidget.h
tests/: CMakeLists.txt  README.md  run_tests.bat  test_main.cpp
tests/integration/: test_environmentworkflow.cpp  test_environmentworkflow.h
tests/unit/: test_environmentcachemanager.cpp  test_environmentcachemanager.h  test_environmentscanner.cpp  test_environmentscanner.h  test_yoloservice.cpp  test_yoloservice.h
